update comment